@@ -45,21 +45,21 @@ except ImportError:
 #  - SHA1 sum of package
 archives = [
     ('Xapian core',
-     'http://xappy.googlecode.com/files/xapian-core-13351a.tgz',
+     'http://xappy.googlecode.com/files/xapian-core-13653.tgz',
      'xapian-core.tgz',
-     'e08f02f9a04ec5a585b5a6a6171ed725f6387481',
+     'fe096641ca8bcb521ec0c58b9453a1eb756bb8c9',
      '',
     ),
     ('Xapian bindings',
-     'http://xappy.googlecode.com/files/xapian-bindings-13351a.tgz',
+     'http://xappy.googlecode.com/files/xapian-bindings-13653.tgz',
      'xapian-bindings.tgz',
-     'e581889662ab49862adcd7768d3c8c398da8bce3',
+     '9d10c278303b0e8bd637c4797de8de79ba07736b',
      '',
     ),
     ('Xapian win32 build system',
-     'http://xappy.googlecode.com/files/win32msvc-13351a.tgz',
+     'http://xappy.googlecode.com/files/win32msvc-13653.tgz',
      'win32msvc.tgz',
-     '723c35692116ccf221b3da8f63cb962bd0856e61',
+     '88dcd9ebfac6b5f5f1309d3f0c5997bc4be92a37',
      'xapian-core/win32',
     ),
     ('Xapian extras',
